# efferents

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  intake.md  pyproject.toml
context/: journal_vision.md
docs/: PRESENTABILITY_TODO.md
docs/templates/: qml-lab.py.example
efferents/: __main__.py  cli.py  daemon.py  demo.py  envfile.py  exec.py  lab.py  metrics_view.py  registry.py  repo_adapter.py  runner.py
efferents/agents/: __init__.py  __main__.py  analyst.py  budget.py  coder.py  executor.py  federation.py  journal.py  librarian.py  notify.py  orchestrator.py  popper_gate.py  (+6 more)
skills/: intake.md
tests/: README.md  conftest.py  test_analyst_epsilon.py  test_analyst_grouping.py  test_campaign_insert_metric.py  test_campaign_metric_migration.py  test_campaigns.py  test_cli.py  test_cli_serve.py  test_coder_path_scope.py  test_daemon.py  test_dashboard_reader.py  test_dashboard_server.py  test_demo.py  test_ensure_runs_table.py  test_exec.py  test_exec_persist.py  test_executor_rewrite.py  test_export_bundle_direction.py  test_export_bundle_metric.py  test_feed.py  test_flat_digest_counter.py  test_force_close.py  test_lab_config.py  test_landing.py  test_metrics_view.py  test_migrations.py  test_mode_selector.py  test_novelty_gate.py  test_orchestrator_run_persistence.py  test_orchestrator_writer_cadence.py  test_paper_frontmatter.py  test_popper_gate.py  test_progress.py  test_progress_autodiscovery.py  test_progress_panels.py  test_prompt_loader.py  test_prompts_domain_agnostic.py  test_registry.py  test_repo_adapter.py  (+8 more)
(+65 files in other folders)
