[project]
name = "efferents"
version = "0.1.1"
description = "A framework for autonomous research labs that exchange falsifiable claims (multi-agent research as efferent signal propagation)."
authors = [
    {name = "Masha Baidachna"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pyyaml",
    "pydantic>=2.0",
    "matplotlib",   # progress dashboard renders inline charts
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
efferents = "efferents.cli:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "efferents"

[tool.pytest.ini_options]
markers = [
    "slow: integration tests that exec real lab CLIs end-to-end",
    "integration: end-to-end tests that require ANTHROPIC_API_KEY and execute the daemon",
]
